# nginx-log-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.sample.json  config.sample.toml  config.sample.yaml  pyproject.toml  pytest.ini  ruff.toml
nginx_log_analyzer/: __init__.py  main.py
src/: __init__.py  settings.py
src/nginx_log_analyzer/: cli.py  config.py  log_parser.py  logger.py  main.py  report_generator.py  stats_calculator.py
tests/: __init__.py  test_cli.py  test_config.py  test_log_parser.py  test_report_generator.py  test_stats_calculator.py
