[tool.poetry]
name = "nginx-log-analyzer"
version = "0.1.0"
package-mode = false
description = "Nginx log analyzer"
authors = ["Aleksander Moiseenko <alex.mois.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "==4.1.0"
ruff = "==0.9.6"
mypy = "==1.15.0"
commitizen = "==4.2.1"


[tool.poetry.group.test.dependencies]
pytest = "==8.3.4"
pytest-cov = "==6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
